Remove height property from .description class to avoid overlapping on zoom in

--- a/styles.css
+++ b/styles.css
@@ -100,10 +100,6 @@ textarea {
   margin-top: -45px;
 }
 
-.description {
-  height: 170px;
-}
-
 .description p {
   font-size: 20px;
   line-height: 28px;
